2003-12-06  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b54

	* Fixed bug where rotated images don't have their size update if 
	  there is no "sized" image.

2003-12-05 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b53

	* Bugfix: Avoid warning and resulting crash in publish_xp.php 
		  when $HTTP_SERVER_VARS["HTTPS"] is not set.
		  (H0bbel catched it.)

	* Change: Typo in config.

2003-12-04  Christian Mohn  <h0bbel@p0ggel.org> 1.4.2-cvs-b52

	* Removed width=100% in view_photo_properties.php to make the table
	  autosize. This keeps it centered, and not "left-shifted" if the popup window
	  is resized

2003-12-04  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b51

	* Fixed bug in slideshow so don't get error if random slideshow with
	  no images to show.

	* Removed "New in 1.4.1" in setup.

	* Changed recursive slideshow text in edit_appearance.

2003-12-04 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b50

	* Bugfix: Set language and charset when lang mode = 0.
	  (Thanks to joan for cathing this.)

2003-12-01  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b49

	* fetch-albums & fetch-albums-prune will now return whether
	  or not the user is allowed to create albums at the root
	  level.

2003-12-01  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b48

	* Added another property to album-properties command to return
	  whether images will be added to the front or back.

2003-12-01  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b47

	* Changed fetch-album-images command in gallery remote 2 to return
	  the album url based on mirror album directories.

2003-11-30  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b46

	* Additional part of fix made in -b44.  We were correctly checking to
	  see if we should remove the old serial file, but incorrectly checking
	  to see if we should create the new one.

2003-11-30  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b45

	* Fix a bug where we cache the EXIF data in AlbumItems even when the